# WEB_Module_1

./: Dockerfile  README.md  address_command.py  addressbook.py  information.py  main.py  menu.py  notes.py  pyproject.toml  requirements.txt
app/: address_command.py  addressbook.py  information.py  logger.py  menu.py  notes.py
hw2/: pyproject.toml
hw_2/: pyproject.toml
